@@ -1,129 +1,182 @@
 package modprueba;
 
-import com.zarcillo.domain.Familia;
-import com.zarcillo.domain.Linea;
-import com.zarcillo.domain.MotivoAnulacion;
-import com.zarcillo.domain.Presentacion;
-import com.zarcillo.domain.Producto;
-import com.zarcillo.domain.RegistroSalida;
-import com.zarcillo.domain.Sublinea;
-import com.zarcillo.domain.TipoPago;
+import com.zarcillo.domain.Mapa;
+import com.zarcillo.domain.Modulo;
 import com.zarcillo.domain.Usuario;
-import com.zarcillo.dto.venta.DetalleVenta;
-import com.zarcillo.service.AnulacionService;
-import com.zarcillo.service.ColaImpresionService;
-import com.zarcillo.service.PlanillaIngresoService;
-import com.zarcillo.service.ProductoService;
-import com.zarcillo.service.RegistroSalidaService;
-import com.zarcillo.service.ResultadoVentaService;
-import com.zarcillo.service.VentaService;
-import java.io.FileInputStream;
-import java.text.DecimalFormat;
+import com.zarcillo.service.MapaService;
+import com.zarcillo.service.ModuloService;
+import com.zarcillo.service.UsuarioService;
+import java.text.DateFormat;
 import java.util.Date;
 import java.util.List;
 import javax.naming.NamingException;
-import jxl.Cell;
-import jxl.Sheet;
-import jxl.Workbook;
-
-
-import net.sf.jasperreports.engine.JRException;
-import org.zkoss.util.media.Media;
-import org.zkoss.zk.ui.HtmlMacroComponent;
+import org.zkoss.zk.ui.Execution;
+import org.zkoss.zk.ui.Executions;
 import org.zkoss.zk.ui.event.Event;
-import org.zkoss.zk.ui.event.ForwardEvent;
+import org.zkoss.zk.ui.event.EventListener;
+
+import org.zkoss.zk.ui.event.Events;
 import org.zkoss.zk.ui.select.SelectorComposer;
 import org.zkoss.zk.ui.select.annotation.Listen;
 import org.zkoss.zk.ui.select.annotation.VariableResolver;
 import org.zkoss.zk.ui.select.annotation.Wire;
 import org.zkoss.zk.ui.select.annotation.WireVariable;
-import org.zkoss.zul.Button;
-import org.zkoss.zul.Fileupload;
-import org.zkoss.zul.ListModel;
-import org.zkoss.zul.ListModelList;
-import org.zkoss.zul.Listbox;
+import org.zkoss.zkmax.zul.Nav;
+import org.zkoss.zkmax.zul.Navbar;
+import org.zkoss.zkmax.zul.Navitem;
+import org.zkoss.zul.Div;
+import org.zkoss.zul.Label;
+import org.zkoss.zul.Menu;
+import org.zkoss.zul.Menubar;
+import org.zkoss.zul.Menuitem;
+import org.zkoss.zul.Menupopup;
+import org.zkoss.zul.Menuseparator;
 import org.zkoss.zul.Messagebox;
-import org.zkoss.zul.Textbox;
+import org.zkoss.zul.Toolbar;
+import org.zkoss.zul.Toolbarbutton;
 import org.zkoss.zul.Window;
 
-/**
- *
- * @author saisa
- */
 @VariableResolver(org.zkoss.zkplus.spring.DelegatingVariableResolver.class)
 public class Prueba extends SelectorComposer {
+    //controles
 
     @Wire
-    private Window winPrueba;
-   
-    
-    
-  
+    private Window index;
+    @Wire
+    private Div divContenido;
+    @Wire
+    private Label lblSesion;
+    @Wire
+    private Toolbar btnModulos;
+    @Wire
+    private Toolbarbutton btnSalir;
+     @Wire
+    private Div divMenu;
+    //wire services
+    @WireVariable
+    UsuarioService usuarioService;
+    @WireVariable
+    MapaService mapaService;
+    @WireVariable
+    ModuloService moduloService;
+    //objetos
+    Usuario usuario;
+    final Execution exec = Executions.getCurrent();
 
-    @Listen("onClick = button#btnCargar")
-    public void crearproductos() throws Exception {
+    @Listen("onCreate=window#index")
+    public void onCreate() throws NamingException {
 
+        usuario = usuarioService.buscarPorLogin("zarcillo");
 
-        Media media = Fileupload.get();
-        Workbook workbook = Workbook.getWorkbook(media.getStreamData());
-        Sheet sheet = workbook.getSheet(0);
-        Producto producto;
-        Linea linea;
-        Sublinea sublinea;
-        DecimalFormat formato = new DecimalFormat("000");
-        for (int i = 1; i < sheet.getRows(); i++) {
-            Cell celda = sheet.getCell(0, i);
-            if (celda.getContents().trim().isEmpty()) {
-                continue;
-            }
+        llenarSesion();
+        List<Modulo> listaModulo = moduloService.listaPorIdrol(usuario.getIdrol().getIdrol());
 
+        for (Modulo m : listaModulo) {
+            final Toolbarbutton boton = new Toolbarbutton(m.getCnommodulo(), m.getCimagen());
+            boton.setId(m.getIdmodulo() + "");
+            boton.setParent(btnModulos);
+            boton.setTooltiptext(m.getCnommodulo());
+            boton.setOrient("vertical");
+            btnModulos.appendChild(boton);
 
-            producto = new Producto();
-
-            //sublinea 
-            celda = sheet.getCell(0, i);
-            linea = new Linea(new Integer(celda.getContents().trim()));
-            sublinea = new Sublinea(linea.getIdlinea());
-            sublinea.setIdlinea(linea);;
-
-            producto.setIdsublinea(sublinea);
-            //presentaqcion
-            celda = sheet.getCell(3, i);
-            producto.setIdpresentacion(new Presentacion(new Integer(celda.getContents().trim())));
-            celda = sheet.getCell(2, i);
-            producto.setCnomproducto(celda.getContents().trim());
-            //iafecto
-            celda = sheet.getCell(4, i);
-            if (celda.getContents().trim().contains("true")) {
-                producto.setBinafecto(true);
-            }
-
-            celda = sheet.getCell(5, i);
-            if (celda.getContents().trim().contains("true")) {
-                producto.setBinafecto(true);
-            }
-
-
-            //id
-
-            celda = sheet.getCell(6, i);
-            Integer id = new Integer(celda.getContents().trim());
-            String cid = formato.format(linea.getIdlinea()) + formato.format(id);
-            producto.setIdproducto(cid);
-
-
-            celda = sheet.getCell(7, i);
-            if (celda.getContents() != null) {
-                producto.setCreseta(celda.getContents().trim().toUpperCase());
-            }
-
-            celda = sheet.getCell(8, i);
-            producto.setIdfamilia(new Familia(new Integer(celda.getContents().trim())));
-
-           
+            boton.addEventListener(Events.ON_CLICK, new EventListener() {
+                public void onEvent(Event event) throws Exception {
+                    llenarMenu(Integer.valueOf(boton.getId()));
+                }
+            });
         }
 
+    }
+
+    @Listen("onClick = Toolbarbutton#btnSalir")
+    public void salirSistema() {        
+        index.detach();
+        exec.getDesktop().getSession().invalidate();
+        exec.sendRedirect("/modulos/index.zul");
+    }
+
+    @Listen("onClick = #btnKardex")
+    public void onConsultaKardex(Event event) {
+        Window contactWnd = (Window) Executions.createComponents("/modulos/almacen/consulta/kardexdiario.zul", null, null);
+        contactWnd.doModal();
+    }
+
+    @Listen("onClick = #btnVentas")
+    public void onGenerarVenta(Event event) {
+        Window contactWnd = (Window) Executions.createComponents("/modulos/ventas/registro/nuevaventa.zul", null, null);
+        contactWnd.doModal();
+    }
+
+    @Listen("onClick = #btnDocumento")
+    public void onGenerarDocumento(Event event) {
+        Window contactWnd = (Window) Executions.createComponents("/modulos/ventas/herramientas/generardocumento.zul", null, null);
+        contactWnd.doModal();
+    }
+
+    @Listen("onClick = #btnBoleta")
+    public void onConsultaBoleta(Event event) {
+        Window contactWnd = (Window) Executions.createComponents("/modulos/ventas/consulta/consultaboleta.zul", null, null);
+        contactWnd.doModal();
+    }
+
+    @Listen("onClick = #btnFactura")
+    public void onConsultaFactura(Event event) {
+        Window contactWnd = (Window) Executions.createComponents("/modulos/ventas/consulta/consultafactura.zul", null, null);
+        contactWnd.doModal();
+    }
+
+    @Listen("onClick = #btnClave")
+    public void onCambiarClave(Event event) {
+        Window contactWnd = (Window) Executions.createComponents("/modulos/mantenimiento/util/cambiarclave.zul", null, null);
+        contactWnd.doModal();
+    }
+
+    private void llenarMenu(Integer idmodulo) {  
+        divMenu.detach();
+        Navbar navegacion = new Navbar();
+        navegacion.setOrient("vertical");
+        List<Mapa> listaencabezado = mapaService.listaEncabezado(usuario.getIdrol().getIdrol(), idmodulo);
+
+        for (Mapa m : listaencabezado) {            
+            Nav menuprincipal = new Nav(m.getIdmenu().getCnommenu());
+            navegacion.appendChild(menuprincipal);
+            List<Mapa> listamenus = mapaService.listaMenu(usuario.getIdrol().getIdrol(), m);
+            for (final Mapa mm : listamenus) {
+                Navitem menuopciones = new Navitem();
+                menuopciones.setLabel(mm.getIdmenu().toString());
+                
+                menuprincipal.appendChild(menuopciones);
+                menuopciones.addEventListener(Events.ON_CLICK, new EventListener() {
+                    public void onEvent(Event event) throws Exception {
+
+                        List listame = divContenido.getChildren();
+                        if (!listame.isEmpty()) {
+                            divContenido.getFirstChild().detach();
+                        }
+
+                        if (mm.getIdmenu().getBmodal()) {
+                            Window contactWnd = (Window) Executions.createComponents(mm.getIdmenu().getCruta(), null, null);
+                            contactWnd.doModal();
+                        } else {
+                            Window contactWnd = (Window) Executions.createComponents(mm.getIdmenu().getCruta(), divContenido, null);
+                            contactWnd.doEmbedded();
+                        }
 
 
+                    }
+                });
+
+            }
+
+        }
+     
+        divMenu.appendChild(navegacion);        
+        divContenido.appendChild(navegacion);
+    }
+
+    private void llenarSesion() {
+        DateFormat df = DateFormat.getDateTimeInstance(DateFormat.FULL, DateFormat.DEFAULT);
+        String fechaInicio = df.format(new Date());
+        lblSesion.setValue("Usuario: " + usuario.getCnomusuario() + " | " + "Inicio Sesion: " + fechaInicio + " | ");
     }
 }
